# sequana_pipetools

./: .coveragerc_travis  .gitignore  .readthedocs.yml  .travis.yml  MANIFEST.in  README.rst  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
.github/workflows/: main.yml  pypi.yml
doc/: conf.py  index.rst  new.dot  old.dot  references.rst  temp.dot  veryold.dot
sequana_pipetools/: __init__.py  completion.py  diagnose.py  errors.py  info.py  misc.py  monitor.py  options.py  sequana_manager.py  slurm.py
sequana_pipetools/data/: slurm-35349813.out  slurm-35353027.out
sequana_pipetools/resources/: ext.py  local.yaml  slurm.yaml
sequana_pipetools/scripts/: completion.py  main.py  monitor.py  slurm.py  start_pipeline.py
sequana_pipetools/snaketools/: __init__.py  dot_parser.py  errors.py  file_factory.py  module.py  module_finder.py  pipeline_manager.py  pipeline_utils.py  profile.py  sequana_config.py  slurm.py
sequana_pipetools/sphinxext/: sequana_pipeline.py  snakemakerule.py  wrapper.py
test/: test_complete.py  test_errors.py  test_misc.py  test_options.py  test_slurm.py
test/data/: slurm-no_command.out
tests/: test_complete.py  test_diagnose.py  test_manager.py  test_misc.py  test_monitor.py  test_options.py  test_slurm.py  test_snaketools.py
tests/data/: config.yml  schema.yml  test_dag.dot  test_summary_fastq_stats.json
tests/scripts/: test_complete.py  test_main.py  test_slurm.py  test_start_pipeline.py
tests/snaketools/: test_dotparser.py  test_errors.py  test_filefactory.py  test_module.py  test_pipeline_manager.py  test_pipeline_utils.py  test_profile.py  test_sequana_config.py  test_slurm.py
tests/snaketools/data/slurm_error1/: slurm-54463807.out
tests/snaketools/data/slurm_error1/logs/minimap2_and_genomecov/: minimap2_and_genomecov-sample=H149_P1_200723-slurm-54467146.out  minimap2_and_genomecov-sample=H149_P1_200723-slurm-54474584.out  minimap2_and_genomecov-sample=H149_P1_200723_1000-slurm-54467581.out  minimap2_and_genomecov-sample=H149_P1_200723_1000-slurm-54474583.out  minimap2_and_genomecov-sample=H149_P1_200723_500-slurm-54466792.out  minimap2_and_genomecov-sample=H149_P1_200723_500-slurm-54474582.out
tests/snaketools/data/slurm_error1/logs/quast/: quast-sample=H149_P1_200723-slurm-54467145.out  quast-sample=H149_P1_200723_1000-slurm-54467578.out  quast-sample=H149_P1_200723_500-slurm-54466795.out
tests/snaketools/data/slurm_error_no_master/logs/minimap2_and_genomecov/: minimap2_and_genomecov-sample=H149_P1_200723-slurm-54467146.out  minimap2_and_genomecov-sample=H149_P1_200723-slurm-54474584.out  minimap2_and_genomecov-sample=H149_P1_200723_1000-slurm-54467581.out  minimap2_and_genomecov-sample=H149_P1_200723_1000-slurm-54474583.out  minimap2_and_genomecov-sample=H149_P1_200723_500-slurm-54466792.out  minimap2_and_genomecov-sample=H149_P1_200723_500-slurm-54474582.out
tests/snaketools/data/slurm_error_no_master/logs/quast/: quast-sample=H149_P1_200723-slurm-54467145.out  quast-sample=H149_P1_200723_1000-slurm-54467578.out
tests/sphinxext/: test_sphinxext.py
