[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


#maintainer ?#maintainer email
[tool.poetry]
name = "sequana_pipetools"
version = "0.16.0"
description = "A set of tools to help building or using Sequana pipelines"
authors = ["Sequana Team"]
license = "BSD-3"
repository = "https://github.com/sequana/sequana_pipetools"
readme = "README.rst"
keywords = ["snakemake", "sequana", "pipelines"]
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Intended Audience :: Education",
        "Intended Audience :: End Users/Desktop",
        "Intended Audience :: Developers",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: BSD License",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Topic :: Scientific/Engineering :: Bio-Informatics",
        "Topic :: Scientific/Engineering :: Information Analysis",
]
packages = [
    { include = "sequana_pipetools" }
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
deprecated = ">=1.2.13"
easydev = ">=0.12.1"
parse = ">=1.19.0"
"ruamel.yaml" = ">=0.18.5"
packaging = ">=23.1"
pykwalify = ">=1.8"
importlib_resources = ">=5.4.0"
pyyaml = ">=1.3"
aiohttp = ">=3.8.4"
tqdm = ">=4.65"
charset-normalizer = "^2"
versionix = ">=0.2.0"
rich-click = "^1.7.1"


[tool.poetry.scripts]
sequana_completion = "sequana_pipetools.scripts.completion:main"
sequana_pipetools = "sequana_pipetools.scripts.main:main"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pytest = "^7.4.0"
mock = "^5.1.0"
pytest-mock = "^3.11.1"
sequana-rnaseq = "^0.18.0"
sequana-fastqc = "^1.5.0"
pytest-cov = "^4.1.0"

