[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"


[project]
name = "sequana_pipetools"
version = "1.2.2"
description = "A set of tools to help building or using Sequana pipelines"
authors = [{name="Sequana Team", email="thomas.cokelaer@pasteur.fr"}]
license = "BSD-3"
repository = "https://github.com/sequana/sequana_pipetools"
readme = "README.rst"
keywords = ["snakemake", "sequana", "pipelines"]
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Intended Audience :: Education",
        "Intended Audience :: End Users/Desktop",
        "Intended Audience :: Developers",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: BSD License",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Topic :: Scientific/Engineering :: Bio-Informatics",
        "Topic :: Scientific/Engineering :: Information Analysis",
]
packages = [
    { include = "sequana_pipetools" }
]
requires-python = ">=3.8,<4.0"
dependencies = [
    "easydev >=0.12",
    "parse >=1.19.0",
    "ruamel.yaml >=0.18.5",
    "packaging  >=23.1",
    "pykwalify >=1.8",
    "importlib_resources >=5.4.0",
    "pyyaml >=1.3",
    "aiohttp >=3.8.4",
    "tqdm >=4.65",
    "charset-normalizer >=2",
    "rich-click >=1.7.1",
    "cookiecutter >=2.6.0",
    "docutils (>0.20,!=0.21)",
    "versionix (>=0.99.2,<0.100.0)"
]


[project.scripts]
sequana_pipetools = "sequana_pipetools.scripts.main:main"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pytest = "^8.0.0"
mock = "^5.1.0"
pytest-mock = "^3.11.1"
sequana-rnaseq = "^0.18.0"
sequana-fastqc = "^1.5.0"
pytest-cov = "^4.1.0"

